--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-motion",
+  "name": "re.d.react-motion",
   "version": "0.5.2",
   "description": "A spring that solves your animation problems.",
   "main": "lib/react-motion.js",
   "module": "lib/react-motion.esm.js",
   "peerDependencies": {
-    "react": "^0.14.9 || ^15.3.0 || ^16.0.0"
+    "react": "^15.3.0 || ^16.0.0 || ^17.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-rc.1",
@@ -92,7 +92,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/chenglou/react-motion.git"
+    "url": "https://github.com/Red-Beard7/react-motion.git"
   },
   "keywords": [
     "react",
@@ -107,14 +107,14 @@
     "ui"
   ],
   "author": [
-    "nkbt",
-    "chenglou"
+    "Re.d",
+    "_beard"
   ],
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "7.7.2",
     "performance-now": "^2.1.0",
-    "prop-types": "^15.5.8",
+    "prop-types": "^15.7.2",
     "raf": "^3.1.0"
   }
 }
